discussion/kv_engine/168585/168585_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Decouple vbucket.h from kv_bucket.h

kv_bucket.h is one of the most expensive headers to compile in an
'everything' build of kv_engine, second only to GTest.h:

    ** Expensive headers:
    25140 ms: tlm/deps/googletest.exploded/include/gmock/gmock.h (included 58 times, avg 433 ms), included via:
    22681 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 44 times, avg 515 ms), included via:

52% of the include cost of kv_bucket.h is including the header
vbucket.h.

Restructure headers so kv_bucket.h doesn't need to include vbucket.h,
mostly by moving the types it does need into their own vbucket_types.h
header.

This makes the cost to include kv_bucket.h around half of what it
previously was.

Change-Id: Ice3ea6c8a251cac6ebbf9e0d7ddb8a621e9efc38

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 09:34:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 10:37:30.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14752/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:28: error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:39: error: use of undeclared identifier "EventDrivenDurabilityTimeoutIface" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:55:17: error: type-id cannot have a name [clang-diagnostic-error]
                VBucket&)>;
                ^~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:55:24: error: expected ")" [clang-diagnostic-error]
                VBucket&)>;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:73: note: to match this "("
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:55:26: error: expected ";" after alias declaration [clang-diagnostic-error]
                VBucket&)>;
                         ^
                         ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:14: error: unknown type name "SyncWriteTimeoutHandlerFactory" [clang-diagnostic-error]
extern const SyncWriteTimeoutHandlerFactory NoopSyncWriteTimeoutFactory;
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14752/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:28:
error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14752/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42730/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STParameterizedBucketTest.MB_27457_ReplicateDeleteTimeFuture/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STParameterizedBucketTest.MB_27457_ReplicateDeleteTimeFuture/persistent_couchstore_full_eviction
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(170): error: Expected equality of these values:
  MoreAvailable::No
    Which is: 1-byte object <00>
  res.moreAvailable
    Which is: 1-byte object <01>
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(170): error: Expected equality of these values:
  MoreAvailable::No
    Which is: 1-byte object <00>
  res.moreAvailable
    Which is: 1-byte object <01>
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(2365): error: Expected equality of these values:
  cb::engine_errc::success
    Which is: success
  store->getMetaData(makeStoredDocKey("key1"), vbid, cookie, metadata, deleted, datatype)
    Which is: would block
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(2380): error: Expected equality of these values:
  1
  deleted
    Which is: 0
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(2382): error: Expected: (tombstoneTime) >= (biff.get()), actual: 0 vs 3600
Expected a tombstone to have been set which is equal or greater than our time traveller jump
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(2403): error: Expected equality of these values:
  cb::engine_errc::success
    Which is: success
  store->getMetaData(makeStoredDocKey("key2"), vbid, cookie, metadata, deleted, datatype)
    Which is: would block
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(2416): error: Expected equality of these values:
  1
  deleted
    Which is: 0
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(2418): error: Expected equality of these values:
  deleteTime
    Which is: 1958601165
  tombstoneTime
    Which is: 0
key2 did not have our replicated deleteTime:1958601165
[  FAILED  ] EphemeralOrPersistent/STParameterizedBucketTest.MB_27457_ReplicateDeleteTimeFuture/persistent_couchstore_full_eviction, where GetParam() = ("persistent_couchstore", "full_eviction") (49 ms)
EphemeralOrPersistent/STParameterizedBucketTest.MB_27457_ReplicateDeleteTimeFuture/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42730/ )

Timeout of a CTest test 420/420 Test  #59: ep-engine_ep_unit_tests.NotifyTest ............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24829/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16707/ : FAILURE

Timeout of a CTest test [2022-01-12T10:13:24.439Z] 438/440 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16707/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17500/ : FAILURE

Timeout of a CTest test [2022-01-12T10:05:07.881Z] 249/414 Test  #59: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17500/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16416/ : FAILURE

Timeout of a CTest test [2022-01-12T10:05:49.156Z] 422/422 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16416/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4455/ : FAILURE

Timeout of a CTest test [2022-01-12T10:21:32.149Z]  43/441 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15557/ : FAILURE

Timeout of a CTest test [2022-01-12T09:53:11.700Z] 440/440 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15557/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13594/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36208/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4397/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
